# Compliant-Control-and-Application

./: Dockerfile  Dockerfile-noetic  README.md  index.md  install_dependencies.sh
robot_controllers/joint_torque_controller/: CMakeLists.txt  joint_torque_controller_plugin.xml  package.xml
robot_controllers/joint_torque_controller/include/joint_torque_controller/: joint_torque_controller.h  kinematics_base.h
robot_controllers/joint_torque_controller/src/: joint_torque_controller.cpp
robot_controllers/msg/cartesian_state_msgs/: CMakeLists.txt
robot_controllers/msg/cartesian_state_msgs/msg/: PoseTwist.msg
robot_controllers/msg/joint_effort_msg/: CMakeLists.txt  package.xml
robot_controllers/msg/joint_effort_msg/msg/: JointEffort.msg  JointEfforts.msg
robot_controllers/msg/joint_state_msg/: CMakeLists.txt  package.xml
robot_controllers/msg/joint_state_msg/msg/: JointState.msg
robots/mir_robot/mir_actions/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/mir_robot/mir_actions/action/: MirMoveBase.action
robots/mir_robot/mir_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/mir_robot/mir_description/config/: diffdrive_controller.yaml  joint_state_controller.yaml
robots/mir_robot/mir_description/launch/: mir_debug_urdf.launch  upload_mir_urdf.launch
robots/mir_robot/mir_description/meshes/collision/: caster_wheel_base.stl  mir_100_base.stl  mir_250_base.stl
robots/mir_robot/mir_description/meshes/visual/: mir_100_base.stl  mir_250_base.stl  wheel.stl
robots/mir_robot/mir_description/rviz/: mir_description.rviz
robots/mir_robot/mir_description/urdf/: mir.urdf.xacro  mir_ur5e.urdf.xacro  mir_ur5e_gripper.urdf.xacro
robots/mir_robot/mir_description/urdf/include/: common.gazebo.xacro  common_properties.urdf.xacro  imu.gazebo.urdf.xacro  mir.transmission.xacro  mir_100.gazebo.xacro  mir_100.transmission.xacro  mir_100_v1.urdf.xacro  mir_v1.urdf.xacro  sick_s300.urdf.xacro
robots/mir_robot/mir_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
robots/mir_robot/mir_driver/launch/: mir.launch
robots/mir_robot/mir_driver/nodes/: fake_mir_joint_publisher.py  mir_bridge.py  rep117_filter.py  tf_remove_child_frames.py
robots/mir_robot/mir_driver/src/mir_driver/: rosbridge.py
robots/mir_robot/mir_dwb_critics/: CHANGELOG.rst  CMakeLists.txt  default_critics.xml  package.xml
robots/mir_robot/mir_dwb_critics/include/mir_dwb_critics/: path_angle.h  path_dist_pruned.h  path_progress.h
robots/mir_robot/mir_dwb_critics/nodes/: plot_dwb_scores.py  print_dwb_scores.py
robots/mir_robot/mir_dwb_critics/src/: path_angle.cpp  path_dist_pruned.cpp  path_progress.cpp
robots/mir_robot/mir_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/mir_robot/mir_gazebo/config/: ekf.yaml
robots/mir_robot/mir_gazebo/launch/: fake_localization.launch  mir.launch  mir_empty_world.launch  mir_gazebo_common.launch  mir_maze_world.launch
robots/mir_robot/mir_gazebo/launch/includes/: ekf.launch.xml  spawn_maze.launch.xml
robots/mir_robot/mir_gazebo/maps/: maze_virtual_walls.yaml
robots/mir_robot/mir_gazebo/sdf/maze/: model.config  model.sdf
robots/mir_robot/mir_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/mir_robot/mir_msgs/msg/: BMSData.msg  BatteryCurrents.msg  BrakeState.msg  ChargingState.msg  Device.msg  Devices.msg  EncoderTestEntry.msg  Encoders.msg  Error.msg  Event.msg  Events.msg  ExternalRobot.msg  ExternalRobots.msg  Gpio.msg  GripperState.msg  HeightState.msg  HookExtendedStatus.msg  HookStatus.msg  IOs.msg  JoystickVel.msg  LocalMapStat.msg  MirExtra.msg  MissionCtrlCommand.msg  MissionCtrlState.msg  PalletLifterStatus.msg  Path.msg  Pendant.msg  PlanSegment.msg  PlanSegments.msg  Pose2D.msg  PowerBoardMotorStatus.msg  PrecisionDockingStatus.msg  Proximity.msg  ResourceState.msg  ResourcesState.msg  RobotMode.msg  RobotState.msg  RobotStatus.msg  SafetyStatus.msg  SoundEvent.msg  (+7 more)
robots/mir_robot/mir_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/mir_robot/mir_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_global_params.yaml  costmap_global_params_plugins_no_virtual_walls.yaml  costmap_global_params_plugins_virtual_walls.yaml  costmap_local_params.yaml  costmap_local_params_plugins_no_virtual_walls.yaml  costmap_local_params_plugins_virtual_walls.yaml  dwa_local_planner_params.yaml  dwb_local_planner_params.yaml  eband_local_planner_params.yaml  mir_local_planner_params.yaml  move_base_common_params.yaml  pose_local_planner_params.yaml  sbpl_global_params.yaml  teb_local_planner_params.yaml
robots/mir_robot/mir_navigation/launch/: amcl.launch  hector_mapping.launch  move_base.xml  start_maps.launch  start_planner.launch
robots/mir_robot/mir_navigation/mprim/: genmprim_unicycle_highcost_5cm.m  genmprim_unicycle_highcost_5cm.py  unicycle_5cm_expensive_turn_in_place.mprim  unicycle_5cm_expensive_turn_in_place_highcost.mprim  unicycle_5cm_noreverse_trolley.mprim  unicycle_highcost_10cm.mprim  unicycle_highcost_1cm.mprim  unicycle_highcost_2_5cm.mprim  unicycle_highcost_2cm.mprim  unicycle_highcost_5cm.mprim
robots/mir_robot/mir_navigation/nodes/: acc_finder.py  min_max_finder.py
robots/mir_robot/mir_navigation/rviz/: navigation.rviz
robots/mir_robot/mir_navigation/scripts/: plot_mprim.py
robots/mir_robot/mir_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/robotiq/robotiq_description/: CMakeLists.txt  package.xml
robots/robotiq/robotiq_description/config/: robotiq_85.rviz
robots/robotiq/robotiq_description/launch/: display_robotiq85.launch
robots/robotiq/robotiq_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  robotiq_85_gripper_sim_base.urdf.xacro
robots/robotiq/robotiq_gazebo/: CMakeLists.txt  package.xml
robots/robotiq/robotiq_gazebo/src/: disable_link_plugin.cpp  mimic_joint_plugin.cpp
universal_robot/ur_e_gazebo/: CMakeLists.txt
universal_robot/ur_e_gazebo/controller/: arm_controller_ur5e.yaml
universal_robot/ur_e_gazebo/launch/: ur5e.launch
(+168 files in other folders)
