<?xml version="1.0"?>
<package format="2">
  <name>mir_dwb_critics</name>
  <version>1.1.5</version>
  <description>
    Trajectory critics for the dwb_local_planner that work well together with the SBPL global planner on the MiR robot
  </description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>

  <url type="website">https://github.com/dfki-ric/mir_dwb_critics</url>
  <url type="repository">https://github.com/dfki-ric/mir_dwb_critics</url>
  <url type="bugtracker">https://github.com/dfki-ric/mir_dwb_critics/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>costmap_queue</depend>
  <depend>dwb_critics</depend>
  <depend>dwb_local_planner</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_core2</depend>
  <depend>nav_grid_iterators</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <dwb_local_planner plugin="${prefix}/default_critics.xml"/>
  </export>
</package>
